unpackaged/main/default/objects/Sync_Settings__mdt/Sync_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Sync Settings</label>
    <pluralLabel>Sync Settings</pluralLabel>
</CustomObject>