unpackaged/main/default/objects/Sync_Settings__mdt/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <description>API name of the child object to be included in payload</description>
    <label>Child Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>