unpackaged/main/default/objects/Sync_Settings__mdt/fields/External_Id_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field_API_Name__c</fullName>
    <description>API name of the field to be used as External ID</description>
    <label>External Id Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>