unpackaged/main/default/objects/Sync_Settings__mdt/fields/Object_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Object_Endpoint__c</fullName>
    <description>Object specific URL to be appended to the endpoint</description>
    <label>Object Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>