unpackaged/main/default/objects/Sync_Settings__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>If child records to be included in payload, relationship name of child record.</description>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>