unpackaged/main/default/objects/Sync_Settings__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>SObject API Name</description>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>