unpackaged/main/default/objects/Sync_Settings__mdt/fields/Sync_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Sync_Child_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if any child records are to be pushed along with parent payload</description>
    <label>Sync Child Records?</label>
    <type>Checkbox</type>
</CustomField>