unpackaged/main/default/objects/Sync_Settings__mdt/fields/Sync_Order__c.field-meta.xml
<CustomField>
    <fullName>Sync_Order__c</fullName>
    <description>Order in which entity records are to be synced</description>
    <label>Sync Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>