unpackaged/main/default/objects/Sync_Settings__mdt/fields/Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Type__c</fullName>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real-time</fullName>
                <default>true</default>
                <label>Real-time</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>